--- a/src/popup/css/pop-up.css
+++ b/src/popup/css/pop-up.css
@@ -1,4 +1,6 @@
 #tzc-pop-up {
+  position: absolute;
+  bottom: 0px;
   padding: 0 2px;
   color: #fff;
   font-family: Helvetica, Arial, sans-serif;
