--- a/src/pop-up/css/pop-up.css
+++ b/src/pop-up/css/pop-up.css
@@ -7,9 +7,10 @@
   font-family: Lato, Arial, sans-serif;
   font-size: 11px;
   line-height: 20px;
-  label {
-    display: inline-block;
-  }
+}
+
+.pop-up label {
+  display: inline-block;
 }
 
 .button-wrapper {
@@ -19,6 +20,7 @@
   width: 100%;
   border: solid #333 1px;
 }
+
 .open-button {
   border-radius: 20px 0 0 20px;
   background-color: white;
@@ -27,14 +29,18 @@
   margin-left: 1px;
   padding-right: 0px;
   cursor: pointer;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   outline: none;
   border: none;
-  img {
-    height: 25px;
-    width: 25px;
-    border-radius: 25px;
-  }
+}
+
+.open-button img {
+  height: 25px;
+  width: 25px;
+  border-radius: 25px;
 }
 
 .options-display {
@@ -53,7 +59,8 @@
 }
 
 .input {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 80%;
 }
 
@@ -87,3 +94,4 @@ select {
   display: none;
   visibility: hidden;
 }
+/*# sourceMappingURL=pop-up.css.map */
