--- a/tests/mock-site/popup/pop-up.css
+++ b/tests/mock-site/popup/pop-up.css
@@ -8,16 +8,15 @@
   font-size: 11px;
 }
 
-.popUp .optionsDisplayButtonWrapper {
+.popUp .openOptionsDisplayButtonWrapper {
   background-color: white;
   height: auto;
-  width: 100%;
   border: solid #333 1px;
   border-radius: 20px 0 0 20px;
   padding: 5px;
 }
 
-.popUp .optionsDisplayButtonWrapper .optionsDisplayButton {
+.popUp .openOptionsDisplayButtonWrapper .openOptionsDisplayButton {
   display: block;
   border-radius: 20px 0 0 20px;
   background-color: white;
@@ -31,14 +30,14 @@
   padding: 0px;
 }
 
-.popUp .optionsDisplayButtonWrapper .optionsDisplayButton img {
+.popUp .openOptionsDisplayButtonWrapper .openOptionsDisplayButton img {
   display: block;
   height: 25px;
   width: 25px;
   border-radius: 25px;
 }
 
-.popUp .closeOptionsDisplay {
+.popUp .closeOptionsDisplayButton {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   position: absolute;
@@ -54,41 +53,46 @@
   padding: 0px;
 }
 
-.popUp label {
-  display: inline-block;
-}
-
-.popUp select {
-  cursor: pointer;
-}
-
-.popUp .options-display {
+.popUp .optionsDisplay {
   background-color: #333;
   bottom: 20px;
   padding: 10px;
-  width: 300px;
 }
 
-.popUp .from-tz,
-.popUp .to-tz,
-.popUp .full-list {
+.popUp .optionsDisplay div {
+  margin: 10px 0 10px;
+}
+
+.popUp .optionsDisplay select,
+.popUp .optionsDisplay input {
   cursor: pointer;
-  width: 100%;
-  margin: inherit;
 }
 
-.popUp .input {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.popUp .optionsDisplay select {
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.popUp .optionsDisplay input {
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.popUp .optionsDisplay .input,
+.popUp .optionsDisplay .picker {
+  display: inline-block;
   width: 80%;
 }
 
-.popUp .inputs {
-  margin-top: 5px;
-  margin-bottom: 5px;
+.popUp .optionsDisplay .convertButton {
+  background-color: #80c0ff;
+  padding: 10px;
+  border-radius: 8px;
+  width: 100%;
+  border-color: transparent;
 }
 
-.popUp .output-placeholder {
-  font-size: 20px;
+.popUp .optionsDisplay .outputPlaceholder {
+  font-size: larger;
 }
 /*# sourceMappingURL=pop-up.css.map */
