--- a/tests/mock-site/popup/pop-up.css
+++ b/tests/mock-site/popup/pop-up.css
@@ -84,11 +84,16 @@
   width: 80%;
 }
 
-.popUp .optionsDisplay .convertButton {
+.popUp .optionsDisplay .convertButtonWrapper {
+  text-align: center;
+}
+
+.popUp .optionsDisplay .convertButtonWrapper .convertButton {
   background-color: #80c0ff;
+  font-size: 18px;
+  width: 100%;
   padding: 10px;
   border-radius: 8px;
-  width: 100%;
   border-color: transparent;
 }
 
