--- a/tests/mock-site/popup/pop-up.scss
+++ b/tests/mock-site/popup/pop-up.scss
@@ -90,7 +90,11 @@
     }
 
     .outputPlaceholder {
+      background-color: white;
+      color: #333;
       font-size: larger;
+      max-width: 300px;
+      padding: 10px;
     }
   }
 
