--- a/tests/mock-site/popup/pop-up.css
+++ b/tests/mock-site/popup/pop-up.css
@@ -1,42 +1,50 @@
-.popUp {
+timezone-converter-container {
+  /* Positioning */
   position: fixed;
-  right: 500px;
+  right: 0px;
   top: 50px;
+  /* Display & Box Model */
+  max-width: 350px;
+  /* Color */
   color: white;
+  /* Text */
   font-family: Lato, Arial, sans-serif;
   font-size: 11px;
+  /* Other */
 }
 
-.popUp .labelPointDown {
+timezone-converter-container .point-down-emoji {
   position: relative;
   top: 5px;
 }
 
-.popUp h2 {
+timezone-converter-container h2 {
   display: inline-block;
+  font-size: large;
   text-decoration: underline;
 }
 
-.popUp label {
-  font-size: 16px;
+timezone-converter-container label {
+  font-size: medium;
   text-decoration: none;
 }
 
-.popUp hr {
+timezone-converter-container hr {
   margin: 10px 0 10px 0;
 }
 
-.popUp .buttonOpenOptionsDisplayWrapper {
-  border-bottom: 1px dashed;
-  background-color: white;
+timezone-converter-container #open-options-wrapper {
   height: auto;
   border: solid #333 1px;
   border-radius: 20px 0 0 20px;
   padding: 5px;
+  background-color: white;
 }
 
-.popUp .buttonOpenOptionsDisplayWrapper .buttonOpenOptionsDisplay {
+timezone-converter-container #open-options-wrapper #open-options {
   display: block;
+  padding: 0px;
+  border: none;
   border-radius: 20px 0 0 20px;
   background-color: white;
   cursor: pointer;
@@ -45,83 +53,77 @@
       -ms-user-select: none;
           user-select: none;
   outline: none;
-  border: none;
-  padding: 0px;
 }
 
-.popUp .buttonOpenOptionsDisplayWrapper .buttonOpenOptionsDisplay img {
+timezone-converter-container #open-options-wrapper #open-options img {
   display: block;
   height: 25px;
   width: 25px;
   border-radius: 25px;
 }
 
-.popUp .buttonCloseOptionsDisplay {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+timezone-converter-container #close-options {
   position: absolute;
   top: 10px;
   right: 10px;
   width: 16px;
   height: 16px;
-  cursor: pointer;
+  padding: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border: 0px;
   border-color: transparent;
   border-radius: 100%;
   background-color: #ff605c;
-  padding: 0px;
+  cursor: pointer;
 }
 
-.popUp .optionsDisplay {
-  background-color: #333;
+timezone-converter-container #options-display {
   bottom: 20px;
   padding: 10px;
+  background-color: #333;
 }
 
-.popUp .optionsDisplay div {
+timezone-converter-container #options-display div {
   margin: 10px 0 10px;
 }
 
-.popUp .optionsDisplay select,
-.popUp .optionsDisplay input {
-  cursor: pointer;
+timezone-converter-container #options-display select,
+timezone-converter-container #options-display input {
+  padding: 5px;
   border: 1px;
-}
-
-.popUp .optionsDisplay select {
-  padding: 5px;
   border-radius: 8px;
+  cursor: pointer;
 }
 
-.popUp .optionsDisplay input {
-  padding: 5px;
-  border-radius: 8px;
+timezone-converter-container #options-display select {
+  max-width: 100%;
 }
 
-.popUp .optionsDisplay .inputManualDate,
-.popUp .optionsDisplay .inputUiDate {
+timezone-converter-container #options-display #input-manual-date,
+timezone-converter-container #options-display #input-ui-date {
   display: inline-block;
   width: 80%;
 }
 
-.popUp .optionsDisplay .buttonConvertWrapper {
+timezone-converter-container #options-display #convert-datetime-wrapper {
   text-align: center;
 }
 
-.popUp .optionsDisplay .buttonConvertWrapper .buttonConvert {
-  background-color: #80c0ff;
-  font-size: 18px;
-  width: 100%;
+timezone-converter-container #options-display #convert-datetime-wrapper #convert-datetime {
   padding: 10px;
+  width: 100%;
   border-radius: 8px;
   border-color: transparent;
+  font-size: 18px;
+  background-color: #80c0ff;
 }
 
-.popUp .optionsDisplay .conversionOutputPlaceholder {
-  background-color: white;
+timezone-converter-container #options-display #conversion-output {
+  max-width: 100%;
+  padding: 10px;
   color: #333;
   font-size: larger;
-  max-width: 280px;
-  padding: 10px;
+  background-color: white;
 }
 /*# sourceMappingURL=pop-up.css.map */
