--- a/tests/mock-site/popup/pop-up.scss
+++ b/tests/mock-site/popup/pop-up.scss
@@ -1,24 +1,34 @@
-#popUp {
+timezone-converter-container {
+  /* Positioning */
   position: fixed;
   right: 0px;
   top: 50px;
-  color: white;
-  font-family: Lato, Arial, sans-serif;
-  font-size: 11px;
+
+  /* Display & Box Model */
   max-width: 350px;
 
-  #labelPointDown {
+  /* Color */
+  color: white;
+
+  /* Text */
+  font-family: Lato, Arial, sans-serif;
+  font-size: 11px;
+
+  /* Other */
+
+  .point-down-emoji {
     position: relative;
     top: 5px;
   }
 
   h2 {
     display: inline-block;
+    font-size: large;
     text-decoration: underline;
   }
 
   label {
-    font-size: 16px;
+    font-size: medium;
     text-decoration: none;
   }
 
@@ -26,23 +36,23 @@
     margin: 10px 0 10px 0;
   }
 
-  #buttonOpenOptionsDisplayWrapper {
-    border-bottom: 1px dashed;
-    background-color: white;
+  #open-options-wrapper {
     height: auto;
     border: solid #333 1px;
     border-radius: 20px 0 0 20px;
     padding: 5px;
+    background-color: white;
 
-    #buttonOpenOptionsDisplay {
+    #open-options {
       display: block;
+      padding: 0px;
+      border: none;
       border-radius: 20px 0 0 20px;
       background-color: white;
       cursor: pointer;
       user-select: none;
       outline: none;
-      border: none;
-      padding: 0px;
+
       img {
         display: block;
         height: 25px;
@@ -52,25 +62,25 @@
     }
   }
 
-  #buttonCloseOptionsDisplay {
-    box-sizing: border-box;
+  #close-options {
     position: absolute;
     top: 10px;
     right: 10px;
     width: 16px;
     height: 16px;
-    cursor: pointer;
+    padding: 0px;
+    box-sizing: border-box;
     border: 0px;
     border-color: transparent;
     border-radius: 100%;
     background-color: #ff605c;
-    padding: 0px;
+    cursor: pointer;
   }
 
-  #optionsDisplay {
-    background-color: #333;
+  #options-display {
     bottom: 20px;
     padding: 10px;
+    background-color: #333;
 
     div {
       margin: 10px 0 10px;
@@ -78,49 +88,45 @@
 
     select,
     input {
-      cursor: pointer;
+      padding: 5px;
       border: 1px;
+      border-radius: 8px;
+      cursor: pointer;
     }
 
     select {
       max-width: 100%;
-      padding: 5px;
-      border-radius: 8px;
     }
 
-    input {
-      padding: 5px;
-      border-radius: 8px;
-    }
-
-    #inputManualDate,
-    #inputUiDate {
+    #input-manual-date,
+    #input-ui-date {
       display: inline-block;
       width: 80%;
     }
-    #buttonConvertWrapper {
+
+    #convert-datetime-wrapper {
       text-align: center;
-      #buttonConvert {
-        background-color: #80c0ff;
-        font-size: 18px;
-        width: 100%;
+      #convert-datetime {
         padding: 10px;
+        width: 100%;
         border-radius: 8px;
         border-color: transparent;
+        font-size: 18px;
+        background-color: #80c0ff;
       }
     }
 
-    #conversionOutputPlaceholder {
-      background-color: white;
-      color: #333;
-      font-size: larger;
+    #conversion-output {
       max-width: 100%;
       padding: 10px;
+      color: #333;
+      font-size: larger;
+      background-color: white;
     }
   }
 
-  .hidePopUp {
-    display: none;
-    visibility: hidden;
-  }
+  // .hide-timezone-converter {
+  //   display: none;
+  //   visibility: hidden;
+  // }
 }
