Updated CSS to camelcase

--- a/tests/mock-site/popup/pop-up.scss
+++ b/tests/mock-site/popup/pop-up.scss
@@ -98,8 +98,8 @@ timezone-converter-container {
       max-width: 100%;
     }
 
-    #input-manual-date,
-    #input-ui-date {
+    #js-input-manual-date,
+    #js-input-ui-date {
       display: inline-block;
       width: 80%;
     }
