--- a/src/pop-up/css/pop-up.scss
+++ b/src/pop-up/css/pop-up.scss
@@ -2,7 +2,7 @@ timezone-converter-container {
   /* Positioning */
   position: fixed;
   right: 0px;
-  top: 50px;
+  top: 10px;
 
   /* Display & Box Model */
   max-width: 350px;
@@ -23,6 +23,7 @@ timezone-converter-container {
 
   h2 {
     display: inline-block;
+    margin: 0;
     font-size: large;
     text-decoration: underline;
   }
@@ -33,7 +34,7 @@ timezone-converter-container {
   }
 
   hr {
-    margin: 10px 0 10px 0;
+    margin: 20px 0 20px 0;
   }
 
   #open-options-wrapper {
@@ -99,10 +100,16 @@ timezone-converter-container {
       max-width: 100%;
     }
 
-    #js-input-manual-date,
-    #js-input-ui-date {
+    #js-input-manual,
+    #js-input-picker {
       display: inline-block;
       width: 80%;
+      // background-color: white;
+    }
+
+    #js-input-manual:disabled,
+    #js-input-picker:disabled {
+      background-color: #d3d3d3;
     }
 
     #convert-datetime-wrapper {
@@ -126,7 +133,7 @@ timezone-converter-container {
     }
   }
 
-  .hide-timezone-converter {
+  .hide-timezone-element {
     display: none;
     visibility: hidden;
   }
