--- a/src/pop-up/css/pop-up.scss
+++ b/src/pop-up/css/pop-up.scss
@@ -110,40 +110,20 @@ timezone-converter-container {
     [data-tip] {
       position: relative;
     }
-    [data-tip]:before {
-      content: '';
-      /* hides the tooltip when not hovered */
-      display: none;
-      content: '';
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-bottom: 5px solid #1a1a1a;
-      position: absolute;
-      top: 30px;
-      left: 35px;
-      z-index: 8;
-      font-size: 0;
-      line-height: 0;
-      width: 0;
-      height: 0;
-    }
     [data-tip]:after {
       display: none;
       content: attr(data-tip);
       position: absolute;
       top: 35px;
-      left: -50px;
+      left: 50px;
+      width: 200px;
       padding: 5px 8px;
       background: #1a1a1a;
       color: #fff;
       z-index: 9;
       font-size: 1.3em;
-      height: 18px;
       line-height: 18px;
-      -webkit-border-radius: 3px;
-      -moz-border-radius: 3px;
       border-radius: 3px;
-      white-space: nowrap;
       word-wrap: normal;
     }
     [data-tip]:hover:before,
