--- a/src/pop-up/css/pop-up.scss
+++ b/src/pop-up/css/pop-up.scss
@@ -104,31 +104,33 @@ timezone-converter-container {
     #js-input-picker {
       display: inline-block;
       width: 85%;
-      // background-color: white;
     }
 
-    [data-tip] {
+    .tooltip {
       position: relative;
+      border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
     }
-    [data-tip]:after {
-      display: none;
-      content: attr(data-tip);
+
+    /* Tooltip text */
+    .tooltip .tooltiptext {
       position: absolute;
-      top: 35px;
+      visibility: hidden;
+      top: 30px;
       left: 50px;
       width: 200px;
-      padding: 5px 8px;
-      background: #1a1a1a;
+      z-index: 1;
+      padding: 5px;
+      border-radius: 6px;
+      font-size: 14px;
+      background-color: black;
       color: #fff;
-      z-index: 9;
-      font-size: 1.3em;
-      line-height: 18px;
-      border-radius: 3px;
-      word-wrap: normal;
+
+      /* Position the tooltip text - see examples below! */
     }
-    [data-tip]:hover:before,
-    [data-tip]:hover:after {
-      display: block;
+
+    /* Show the tooltip text when you mouse over the tooltip container */
+    .tooltip:hover .tooltiptext {
+      visibility: visible;
     }
 
     #js-input-manual:disabled,
