--- a/src/pop-up/css/pop-up.scss
+++ b/src/pop-up/css/pop-up.scss
@@ -16,11 +16,6 @@ timezone-converter-container {
 
   /* Other */
 
-  .point-down-emoji {
-    position: relative;
-    top: 5px;
-  }
-
   h2 {
     display: inline-block;
     margin: 0;
@@ -35,6 +30,35 @@ timezone-converter-container {
 
   hr {
     margin: 20px 0 20px 0;
+  }
+
+  .point-down-emoji {
+    position: relative;
+    top: 5px;
+  }
+
+  .tooltip {
+    position: relative;
+
+    .tooltiptext {
+      position: absolute;
+      visibility: hidden;
+      top: 30px;
+      left: 50px;
+      width: 200px;
+      z-index: 1;
+      padding: 5px;
+      border-radius: 6px;
+      font-size: 14px;
+      background-color: black;
+      color: #fff;
+    }
+  }
+
+  .tooltip:hover {
+    .tooltiptext {
+      visibility: visible;
+    }
   }
 
   #open-options-wrapper {
@@ -63,22 +87,6 @@ timezone-converter-container {
     }
   }
 
-  // TODO: Move down into #options-display?
-  #js-close-options {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 16px;
-    height: 16px;
-    padding: 0px;
-    box-sizing: border-box;
-    border: 0px;
-    border-color: transparent;
-    border-radius: 100%;
-    background-color: #ff605c;
-    cursor: pointer;
-  }
-
   #options-display {
     bottom: 20px;
     padding: 10px;
@@ -100,37 +108,25 @@ timezone-converter-container {
       max-width: 100%;
     }
 
+    #js-close-options {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 16px;
+      height: 16px;
+      padding: 0px;
+      box-sizing: border-box;
+      border: 0px;
+      border-color: transparent;
+      border-radius: 100%;
+      background-color: #ff605c;
+      cursor: pointer;
+    }
+
     #js-input-manual,
     #js-input-picker {
       display: inline-block;
       width: 85%;
-    }
-
-    .tooltip {
-      position: relative;
-      border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-    }
-
-    /* Tooltip text */
-    .tooltip .tooltiptext {
-      position: absolute;
-      visibility: hidden;
-      top: 30px;
-      left: 50px;
-      width: 200px;
-      z-index: 1;
-      padding: 5px;
-      border-radius: 6px;
-      font-size: 14px;
-      background-color: black;
-      color: #fff;
-
-      /* Position the tooltip text - see examples below! */
-    }
-
-    /* Show the tooltip text when you mouse over the tooltip container */
-    .tooltip:hover .tooltiptext {
-      visibility: visible;
     }
 
     #js-input-manual:disabled,
