--- a/src/pop-up/css/pop-up.scss
+++ b/src/pop-up/css/pop-up.scss
@@ -5,7 +5,7 @@ timezone-converter-container {
   top: 10px;
 
   /* Display & Box Model */
-  max-width: 375px;
+  max-width: 300px;
 
   /* Color */
   color: white;
@@ -19,7 +19,6 @@ timezone-converter-container {
   h2 {
     display: inline-block;
     margin: 0;
-    font-size: large;
     text-decoration: underline;
     cursor: default;
   }
@@ -132,21 +131,60 @@ timezone-converter-container {
     }
 
     .convert-button {
-      padding: 10px;
+      padding: 5px;
       width: 100%;
       border-radius: 8px;
       border-color: transparent;
-      font-size: 18px;
       background-color: #80c0ff;
       cursor: pointer;
+    }
+
+    .conversion-alert {
+      position: absolute;
+      bottom: 100px;
+      right: 20px;
+      width: 240px;
+      padding: 10px;
+      background-color: #f44336;
+      color: white;
+
+      .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .closebtn:hover {
+        color: black;
+      }
     }
 
     #js-conversion-output {
       max-width: 100%;
       padding: 10px;
       color: #333;
-      font-size: larger;
       background-color: white;
+
+      h3 {
+        display: inline-block;
+        margin: 0;
+        text-decoration: underline;
+      }
+
+      h2,
+      h4 {
+        padding-left: 20px;
+        margin: 0;
+        text-decoration: none;
+      }
+
+      label {
+        display: inline-block;
+      }
     }
   }
 
