--- a/src/popup/css/popup.scss
+++ b/src/popup/css/popup.scss
@@ -21,6 +21,7 @@ timezone-converter-container {
     margin: 0;
     text-decoration: underline;
     cursor: default;
+    font-size: 1.5em;
   }
 
   label {
@@ -173,6 +174,7 @@ timezone-converter-container {
         display: inline-block;
         margin: 0;
         text-decoration: underline;
+        font-size: 1.2em;
       }
 
       h2,
@@ -180,6 +182,10 @@ timezone-converter-container {
         padding-left: 20px;
         margin: 0;
         text-decoration: none;
+      }
+
+      h4 {
+        font-size: 1.2em;
       }
 
       label {
