--- a/src/popup/css/popup.scss
+++ b/src/popup/css/popup.scss
@@ -13,6 +13,7 @@ timezone-converter-container {
   /* Text */
   font-family: Lato, Arial, sans-serif;
   font-size: 11px;
+  font-weight: 400;
 
   /* Other */
 
@@ -22,6 +23,7 @@ timezone-converter-container {
     text-decoration: underline;
     cursor: default;
     font-size: 1.5em;
+    font-weight: 400;
   }
 
   label {
