--- a/tests/mock-site/popup/pop-up.css
+++ b/tests/mock-site/popup/pop-up.css
@@ -4,13 +4,33 @@ timezone-converter-container {
   right: 0px;
   top: 10px;
   /* Display & Box Model */
-  max-width: 350px;
+  max-width: 300px;
   /* Color */
   color: white;
   /* Text */
   font-family: Lato, Arial, sans-serif;
-  font-size: 11px;
+  font-size: 13px;
+  font-weight: 400;
   /* Other */
+}
+
+timezone-converter-container h2 {
+  display: inline-block;
+  margin: 0;
+  text-decoration: underline;
+  cursor: default;
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+timezone-converter-container label {
+  display: inline-block;
+  font-size: medium;
+  text-decoration: none;
+}
+
+timezone-converter-container hr {
+  margin: 20px 0 20px 0;
 }
 
 timezone-converter-container .point-down-emoji {
@@ -18,20 +38,27 @@ timezone-converter-container .point-down-emoji {
   top: 5px;
 }
 
-timezone-converter-container h2 {
-  display: inline-block;
-  margin: 0;
-  font-size: large;
-  text-decoration: underline;
+timezone-converter-container .tooltip {
+  position: relative;
+  opacity: 1;
 }
 
-timezone-converter-container label {
-  font-size: medium;
-  text-decoration: none;
+timezone-converter-container .tooltip .tooltiptext {
+  position: absolute;
+  visibility: hidden;
+  top: 30px;
+  left: 50px;
+  width: 200px;
+  z-index: 1;
+  padding: 5px;
+  border-radius: 6px;
+  font-size: 14px;
+  background-color: black;
+  color: #fff;
 }
 
-timezone-converter-container hr {
-  margin: 20px 0 20px 0;
+timezone-converter-container .tooltip:hover .tooltiptext {
+  visibility: visible;
 }
 
 timezone-converter-container #open-options-wrapper {
@@ -63,22 +90,6 @@ timezone-converter-container #open-options-wrapper #js-open-options img {
   border-radius: 25px;
 }
 
-timezone-converter-container #js-close-options {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 16px;
-  height: 16px;
-  padding: 0px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border: 0px;
-  border-color: transparent;
-  border-radius: 100%;
-  background-color: #ff605c;
-  cursor: pointer;
-}
-
 timezone-converter-container #options-display {
   bottom: 20px;
   padding: 10px;
@@ -94,6 +105,7 @@ timezone-converter-container #options-display input {
   padding: 5px;
   border: 1px;
   border-radius: 8px;
+  font-size: inherit;
   cursor: pointer;
 }
 
@@ -101,35 +113,90 @@ timezone-converter-container #options-display select {
   max-width: 100%;
 }
 
+timezone-converter-container #options-display #js-close-options {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 16px;
+  height: 16px;
+  padding: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 0px;
+  border-color: transparent;
+  border-radius: 100%;
+  background-color: #ff605c;
+  cursor: pointer;
+}
+
 timezone-converter-container #options-display #js-input-manual,
 timezone-converter-container #options-display #js-input-picker {
   display: inline-block;
-  width: 80%;
+  width: 85%;
+  cursor: text;
 }
 
-timezone-converter-container #options-display #js-input-manual:disabled,
-timezone-converter-container #options-display #js-input-picker:disabled {
-  background-color: #d3d3d3;
-}
-
-timezone-converter-container #options-display #convert-datetime-wrapper {
-  text-align: center;
-}
-
-timezone-converter-container #options-display #convert-datetime-wrapper #js-convert-datetime {
-  padding: 10px;
+timezone-converter-container #options-display .convert-button {
+  padding: 5px;
   width: 100%;
   border-radius: 8px;
   border-color: transparent;
-  font-size: 18px;
   background-color: #80c0ff;
+  cursor: pointer;
+}
+
+timezone-converter-container #options-display .conversion-alert {
+  position: absolute;
+  bottom: 100px;
+  right: 20px;
+  width: 240px;
+  padding: 10px;
+  background-color: #f44336;
+  color: white;
+}
+
+timezone-converter-container #options-display .conversion-alert .closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+timezone-converter-container #options-display .conversion-alert .closebtn:hover {
+  color: black;
 }
 
 timezone-converter-container #options-display #js-conversion-output {
   max-width: 100%;
   padding: 10px;
   color: #333;
-  font-size: larger;
   background-color: white;
+}
+
+timezone-converter-container #options-display #js-conversion-output h3 {
+  display: inline-block;
+  margin: 0;
+  text-decoration: underline;
+  font-size: 1.2em;
+}
+
+timezone-converter-container #options-display #js-conversion-output h2,
+timezone-converter-container #options-display #js-conversion-output h4 {
+  padding-left: 20px;
+  margin: 0;
+  text-decoration: none;
+}
+
+timezone-converter-container #options-display #js-conversion-output h4 {
+  font-size: 1.2em;
+}
+
+timezone-converter-container #options-display #js-conversion-output label {
+  display: inline-block;
 }
 /*# sourceMappingURL=pop-up.css.map */
