--- a/tests/mock-site/popup/pop-up.scss
+++ b/tests/mock-site/popup/pop-up.scss
@@ -5,36 +5,65 @@ timezone-converter-container {
   top: 10px;
 
   /* Display & Box Model */
-  max-width: 350px;
+  max-width: 300px;
 
   /* Color */
   color: white;
 
   /* Text */
   font-family: Lato, Arial, sans-serif;
-  font-size: 11px;
+  font-size: 13px;
+  font-weight: 400;
 
   /* Other */
-
-  .point-down-emoji {
-    position: relative;
-    top: 5px;
-  }
 
   h2 {
     display: inline-block;
     margin: 0;
-    font-size: large;
     text-decoration: underline;
+    cursor: default;
+    font-size: 1.5em;
+    font-weight: 400;
   }
 
   label {
+    display: inline-block;
     font-size: medium;
     text-decoration: none;
   }
 
   hr {
     margin: 20px 0 20px 0;
+  }
+
+  .point-down-emoji {
+    position: relative;
+    top: 5px;
+  }
+
+  .tooltip {
+    position: relative;
+    opacity: 1;
+
+    .tooltiptext {
+      position: absolute;
+      visibility: hidden;
+      top: 30px;
+      left: 50px;
+      width: 200px;
+      z-index: 1;
+      padding: 5px;
+      border-radius: 6px;
+      font-size: 14px;
+      background-color: black;
+      color: #fff;
+    }
+  }
+
+  .tooltip:hover {
+    .tooltiptext {
+      visibility: visible;
+    }
   }
 
   #open-options-wrapper {
@@ -63,22 +92,6 @@ timezone-converter-container {
     }
   }
 
-  // TODO: Move down into #options-display?
-  #js-close-options {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 16px;
-    height: 16px;
-    padding: 0px;
-    box-sizing: border-box;
-    border: 0px;
-    border-color: transparent;
-    border-radius: 100%;
-    background-color: #ff605c;
-    cursor: pointer;
-  }
-
   #options-display {
     bottom: 20px;
     padding: 10px;
@@ -90,37 +103,75 @@ timezone-converter-container {
 
     select,
     input {
+      // height: 30px;
       padding: 5px;
       border: 1px;
       border-radius: 8px;
+      font-size: inherit;
       cursor: pointer;
+    }
+
+    input {
+      // font-size: 16px;
     }
 
     select {
       max-width: 100%;
+      // font-size: 13px;
+    }
+
+    #js-close-options {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 16px;
+      height: 16px;
+      padding: 0px;
+      box-sizing: border-box;
+      border: 0px;
+      border-color: transparent;
+      border-radius: 100%;
+      background-color: #ff605c;
+      cursor: pointer;
     }
 
     #js-input-manual,
     #js-input-picker {
       display: inline-block;
-      width: 80%;
-      // background-color: white;
+      width: 85%;
+      cursor: text;
     }
 
-    #js-input-manual:disabled,
-    #js-input-picker:disabled {
-      background-color: #d3d3d3;
+    .convert-button {
+      padding: 5px;
+      width: 100%;
+      border-radius: 8px;
+      border-color: transparent;
+      background-color: #80c0ff;
+      cursor: pointer;
     }
 
-    #convert-datetime-wrapper {
-      text-align: center;
-      #js-convert-datetime {
-        padding: 10px;
-        width: 100%;
-        border-radius: 8px;
-        border-color: transparent;
-        font-size: 18px;
-        background-color: #80c0ff;
+    .conversion-alert {
+      position: absolute;
+      bottom: 100px;
+      right: 20px;
+      width: 240px;
+      padding: 10px;
+      background-color: #f44336;
+      color: white;
+
+      .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .closebtn:hover {
+        color: black;
       }
     }
 
@@ -128,8 +179,29 @@ timezone-converter-container {
       max-width: 100%;
       padding: 10px;
       color: #333;
-      font-size: larger;
       background-color: white;
+
+      h3 {
+        display: inline-block;
+        margin: 0;
+        text-decoration: underline;
+        font-size: 1.2em;
+      }
+
+      h2,
+      h4 {
+        padding-left: 20px;
+        margin: 0;
+        text-decoration: none;
+      }
+
+      h4 {
+        font-size: 1.2em;
+      }
+
+      label {
+        display: inline-block;
+      }
     }
   }
 
