--- a/src/popup/css/popup.scss
+++ b/src/popup/css/popup.scss
@@ -6,6 +6,7 @@ timezone-converter-container {
   position: fixed;
   right: 0px;
   top: 10px;
+  z-index: 2147483647 !important;
 
   /* Display & Box Model */
   max-width: 400px;
@@ -186,7 +187,7 @@ timezone-converter-container {
 
     #js-conversion-output {
       max-width: 100%;
-      padding: 10px;
+      padding: 5px;
       color: #333;
       background-color: white;
 
