--- a/src/popup/css/popup.scss
+++ b/src/popup/css/popup.scss
@@ -37,10 +37,6 @@ timezone-converter-container {
     text-decoration: none;
   }
 
-  hr {
-    margin: 20px 0 20px 0;
-  }
-
   .point-down-emoji {
     position: relative;
     top: 5px;
@@ -114,11 +110,14 @@ timezone-converter-container {
       margin: 10px 0 10px;
     }
 
+    label {
+      width: 32%;
+    }
     select,
     input {
       padding: 5px;
       margin: 0px;
-      border: 1px;
+      border: 0px;
       border-radius: 8px;
       font-size: inherit;
       cursor: pointer;
@@ -134,7 +133,13 @@ timezone-converter-container {
     }
 
     select {
-      max-width: 100%;
+      display: inline-block;
+      max-width: 67%;
+    }
+
+    #js-convert-page {
+      width: 30%;
+      margin-left: 5px;
     }
 
     #js-close-options {
@@ -153,9 +158,12 @@ timezone-converter-container {
     }
 
     .convert-button {
-      padding: 5px;
+      padding: 6px;
       width: 100%;
+      border: 0;
       border-radius: 8px;
+      font-size: inherit;
+      line-height: normal;
       border-color: transparent;
       background-color: #80c0ff;
       cursor: pointer;
@@ -188,19 +196,20 @@ timezone-converter-container {
     #js-conversion-output {
       max-width: 100%;
       padding: 5px;
-      color: #333;
-      background-color: white;
+      background-color: #333;
+
+      label {
+        width: auto;
+      }
 
       h3 {
         display: inline-block;
         margin: 0;
-        text-decoration: underline;
-        font-size: 1.2em;
+        font-size: 1.4em;
       }
 
       h2,
       h4 {
-        padding-left: 20px;
         margin: 0;
         text-decoration: none;
       }
