--- a/src/popup/css/popup.scss
+++ b/src/popup/css/popup.scss
@@ -159,7 +159,8 @@ timezone-converter-container {
     }
 
     .convert-button {
-      padding: 6px;
+      padding: 5px;
+      padding-bottom: 7px;
       width: 100%;
       border: 0;
       border-radius: 8px;
